--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -335,7 +335,7 @@
      </attribute>
      <column>
       <property name="text">
-       <string>Device-ID</string>
+       <string>Nick</string>
       </property>
      </column>
      <column>
@@ -346,6 +346,11 @@
      <column>
       <property name="text">
        <string>Port</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Device-ID</string>
       </property>
      </column>
     </widget>
@@ -363,7 +368,7 @@
      </attribute>
      <column>
       <property name="text">
-       <string>Device-ID</string>
+       <string>Nick</string>
       </property>
      </column>
      <column>
@@ -374,6 +379,11 @@
      <column>
       <property name="text">
        <string>Port</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Device-ID</string>
       </property>
      </column>
     </widget>
@@ -394,17 +404,22 @@
      </attribute>
      <column>
       <property name="text">
-       <string>New Column</string>
+       <string>Nick</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Device-ID</string>
+       <string>Address</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Port</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Device-ID</string>
       </property>
      </column>
     </widget>
