--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -69,7 +69,7 @@
          <item row="0" column="0">
           <widget class="QLabel" name="label_Slots_A">
            <property name="text">
-            <string>Slots allowed for A (up to 10)</string>
+            <string>Slots allowed for Constant (up to 10)</string>
            </property>
           </widget>
          </item>
@@ -96,7 +96,7 @@
          <item row="1" column="1">
           <widget class="QSpinBox" name="slots_A">
            <property name="minimum">
-            <number>10</number>
+            <number>30</number>
            </property>
            <property name="maximum">
             <number>80</number>
@@ -210,7 +210,7 @@
          <item row="0" column="0">
           <widget class="QLabel" name="label_Slots_B">
            <property name="text">
-            <string>Slots allowed for B (up to 20)</string>
+            <string>Slots allowed for Remote (up to 20)</string>
            </property>
           </widget>
          </item>
@@ -237,7 +237,7 @@
          <item row="1" column="1">
           <widget class="QSpinBox" name="urlamount_B">
            <property name="minimum">
-            <number>10</number>
+            <number>20</number>
            </property>
            <property name="maximum">
             <number>80</number>
@@ -351,7 +351,7 @@
          <item row="0" column="0">
           <widget class="QLabel" name="label_Slots_C">
            <property name="text">
-            <string>Slots allowed for C (up to 15)</string>
+            <string>Slots allowed for Flexible (up to 15)</string>
            </property>
           </widget>
          </item>
@@ -458,7 +458,7 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Deviec Cache Max</string>
+        <string>Device Cache Max</string>
        </property>
       </widget>
      </item>
@@ -474,7 +474,7 @@
         <number>5000</number>
        </property>
        <property name="value">
-        <number>1500</number>
+        <number>2000</number>
        </property>
       </widget>
      </item>
